@@ -71,7 +71,7 @@ AC_SUBST(version)
 AC_OUTPUT([ \
 	Makefile \
 	mark5access.pc \
-	mark5access.spec \
+	vlbi-mark5access.spec \
 	mark5access/Makefile \
 	bbsum/Makefile \
 	examples/Makefile \
